--- a/app/src/main/res/drawable/receiver_messages_layout.xml
+++ b/app/src/main/res/drawable/receiver_messages_layout.xml
@@ -3,8 +3,8 @@
     <corners
         android:radius="10dp"/>
     <stroke
-        android:color="@color/colorGray"
+        android:color="@color/colorMain"
         android:width="1dp"/>
     <solid
-        android:color="@color/colorGray"/>
+        android:color="@color/colorMain"/>
 </shape>
