--- a/app/src/main/res/drawable/sender_messages_layout.xml
+++ b/app/src/main/res/drawable/sender_messages_layout.xml
@@ -3,8 +3,8 @@
     <corners
         android:radius="10dp"/>
     <stroke
-        android:color="@color/colorMain"
+        android:color="#FFFFBB"
         android:width="1dp"/>
     <solid
-        android:color="@color/colorMain"/>
+        android:color="#FFFFBB"/>
 </shape>
