--- a/app/src/main/res/layout/custom_messages_layout.xml
+++ b/app/src/main/res/layout/custom_messages_layout.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="#e0e0e0">
 
 
     <ImageView
@@ -17,16 +17,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="10dp"
         android:layout_marginLeft="3dp"
+        android:layout_marginTop="10dp"
         android:layout_toEndOf="@+id/message_profile_image"
-        android:text="receiver messages here"
-        android:padding="10dp"
-        android:textSize="14sp"
-        android:textStyle="bold"
-        android:textColor="@android:color/black"
+        android:layout_toRightOf="@+id/message_profile_image"
         android:background="@drawable/receiver_messages_layout"
-        android:layout_toRightOf="@+id/message_profile_image" />
+        android:padding="10dp"
+        android:text="receiver messages here"
+        android:textColor="@android:color/black"
+        android:textSize="14sp"
+        android:textStyle="bold" />
 
 
     <ImageView
@@ -34,33 +34,33 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:layout_margin="5dp"
-        android:scaleType="centerCrop"
-        android:layout_alignParentRight="true" />
+        android:scaleType="centerCrop" />
 
     <ImageView
         android:id="@+id/message_receiver_image_view"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_margin="5dp"
-        android:scaleType="centerCrop"
-        android:layout_alignParentLeft="true" />
+        android:scaleType="centerCrop" />
 
 
     <TextView
         android:id="@+id/sender_messsage_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="10dp"
         android:layout_alignParentTop="@+id/receiver_message_text"
-        android:text="sender messages"
-        android:textSize="14sp"
-        android:padding="10dp"
-        android:textStyle="bold"
-        android:textColor="@android:color/black"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="10dp"
         android:background="@drawable/sender_messages_layout"
-        android:layout_alignParentRight="true" />
+        android:padding="10dp"
+        android:text="sender messages"
+        android:textColor="@android:color/black"
+        android:textSize="14sp"
+        android:textStyle="bold" />
 
 </RelativeLayout>
