--- a/app/src/main/res/layout/evaluate_layout.xml
+++ b/app/src/main/res/layout/evaluate_layout.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="#e0e0e0">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="15dp"
-        android:orientation="horizontal"
-        >
+        android:layout_marginStart="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginBottom="15dp"
+        android:background="@drawable/shape_textview"
+        android:orientation="horizontal">
 
 
         <ImageView
@@ -26,16 +31,15 @@
             android:orientation="vertical">
 
 
-
             <TextView
                 android:id="@+id/user_name"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:text="username"
                 android:layout_margin="2dp"
+                android:gravity="center"
+                android:text="username"
                 android:textAlignment="center"
-                android:textSize="22sp"
-                android:gravity="center" />
+                android:textSize="22sp" />
 
 
             <LinearLayout
@@ -46,31 +50,35 @@
 
                 <Button
                     android:id="@+id/one"
-                    android:layout_width="40dp"
+                    android:layout_width="25dp"
                     android:layout_height="40dp"
                     android:layout_weight="1"
                     android:background="@drawable/star" />
+
                 <Button
                     android:id="@+id/two"
-                    android:layout_width="40dp"
+                    android:layout_width="25dp"
                     android:layout_height="40dp"
                     android:layout_weight="1"
                     android:background="@drawable/star" />
+
                 <Button
                     android:id="@+id/three"
-                    android:layout_width="40dp"
+                    android:layout_width="25dp"
                     android:layout_height="40dp"
                     android:layout_weight="1"
                     android:background="@drawable/star" />
+
                 <Button
                     android:id="@+id/four"
-                    android:layout_width="40dp"
+                    android:layout_width="25dp"
                     android:layout_height="40dp"
                     android:layout_weight="1"
                     android:background="@drawable/star" />
+
                 <Button
                     android:id="@+id/five"
-                    android:layout_width="40dp"
+                    android:layout_width="25dp"
                     android:layout_height="40dp"
                     android:layout_weight="1"
                     android:background="@drawable/star" />
