--- a/app/src/main/res/layout/favorite_layout.xml
+++ b/app/src/main/res/layout/favorite_layout.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="#e0e0e0">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="15dp"
-        android:orientation="horizontal"
-        >
+        android:layout_marginStart="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginBottom="15dp"
+        android:background="@drawable/shape_textview"
+        android:orientation="horizontal">
 
 
         <ImageView
@@ -19,56 +24,52 @@
             android:src="@drawable/activity" />
 
 
+        <LinearLayout
+            android:layout_width="220dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="220dp"
+            <TextView
+                android:id="@+id/activity_name"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                >
+                android:gravity="center"
+                android:text="activity_name"
+                android:textAlignment="center"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/activity_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="activity_name"
-                    android:textAlignment="center"
-                    android:textSize="18sp"
-                    android:textStyle="bold"
-                    android:gravity="center" />
+            <TextView
+                android:id="@+id/activity_place"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:gravity="center"
+                android:text="activity_place"
+                android:textAlignment="center"
+                android:textSize="16sp" />
 
-                <TextView
-                    android:id="@+id/activity_place"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="activity_place"
-                    android:layout_margin="2dp"
-                    android:textAlignment="center"
-                    android:textSize="16sp"
-                    android:gravity="center" />
-
-                <TextView
-                    android:id="@+id/activity_time"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="activity_time"
-                    android:layout_margin="2dp"
-                    android:textAlignment="center"
-                    android:textSize="16sp"
-                    android:gravity="center" />
+            <TextView
+                android:id="@+id/activity_time"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:gravity="center"
+                android:text="activity_time"
+                android:textAlignment="center"
+                android:textSize="16sp" />
 
 
-            </LinearLayout>
+        </LinearLayout>
 
 
-            <Button
-                android:id="@+id/user_online_status"
-                android:layout_width="50dp"
-                android:layout_height="43dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginRight="10dp"
-                android:background="@drawable/p12"
-           />
-
+        <Button
+            android:id="@+id/user_online_status"
+            android:layout_width="50dp"
+            android:layout_height="43dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/p12" />
 
 
     </LinearLayout>
