--- a/app/src/main/res/layout/user_display_layout.xml
+++ b/app/src/main/res/layout/user_display_layout.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="#e0e0e0">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="15dp"
-        android:orientation="horizontal"
-        >
+        android:layout_marginStart="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginBottom="15dp"
+        android:background="@drawable/shape_textview"
+        android:orientation="horizontal">
 
 
         <ImageView
@@ -28,18 +33,17 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                >
+                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/user_profile_name"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
+                    android:gravity="start"
                     android:text="user name"
                     android:textAlignment="textStart"
                     android:textSize="18sp"
-                    android:textStyle="bold"
-                    android:gravity="start" />
+                    android:textStyle="bold" />
 
                 <ImageView
                     android:id="@+id/user_online_status"
@@ -47,7 +51,7 @@
                     android:layout_height="18dp"
                     android:layout_marginTop="5dp"
                     android:src="@drawable/head"
-                    android:visibility="invisible"/>
+                    android:visibility="invisible" />
 
             </LinearLayout>
 
@@ -56,11 +60,11 @@
                 android:id="@+id/user_status"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="user status"
                 android:layout_margin="2dp"
+                android:gravity="start"
+                android:text="user status"
                 android:textAlignment="textStart"
-                android:textSize="16sp"
-                android:gravity="start" />
+                android:textSize="16sp" />
 
 
             <LinearLayout
@@ -73,25 +77,24 @@
                     android:id="@+id/request_accept_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="30dp"
-                    android:text="Accept"
-                    android:textSize="16sp"
-                    android:textAllCaps="false"
                     android:background="@android:color/holo_green_light"
-                    android:visibility="invisible"
-                    />
+                    android:text="Accept"
+                    android:textAllCaps="false"
+                    android:textSize="16sp"
+                    android:visibility="invisible" />
 
                 <Button
                     android:id="@+id/request_cancel_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="30dp"
-                    android:text="Cancel"
                     android:layout_marginStart="10dp"
-                    android:textSize="16sp"
-                    android:textAllCaps="false"
+                    android:layout_marginLeft="10dp"
                     android:background="@android:color/holo_red_dark"
+                    android:text="Cancel"
+                    android:textAllCaps="false"
                     android:textColor="@android:color/background_light"
-                    android:visibility="invisible"
-                    android:layout_marginLeft="10dp" />
+                    android:textSize="16sp"
+                    android:visibility="invisible" />
 
             </LinearLayout>
 
