--- a/app/src/main/res/layout/custom_chat_bar.xml
+++ b/app/src/main/res/layout/custom_chat_bar.xml
@@ -22,12 +22,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:text="Display UserName"
-        android:textColor="@android:color/background_light"
-        android:textStyle="bold"
+        android:textColor="#000000"
         android:textSize="18sp"
-        android:layout_alignParentLeft="true" />
+        android:textStyle="bold" />
 
 
     <TextView
@@ -36,12 +36,12 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/custom_profile_name"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_marginTop="3dp"
         android:text="Last Seen"
-        android:textColor="@android:color/background_light"
-        android:textStyle="bold"
+        android:textColor="#000000"
         android:textSize="14sp"
-        android:layout_alignParentLeft="true" />
+        android:textStyle="bold" />
 
 
 </RelativeLayout>
