--- a/app/src/main/res/layout/user_display_layout.xml
+++ b/app/src/main/res/layout/user_display_layout.xml
@@ -39,6 +39,7 @@
                     android:id="@+id/user_profile_name"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
                     android:gravity="start"
                     android:text="user name"
                     android:textAlignment="textStart"
@@ -55,17 +56,22 @@
 
             </LinearLayout>
 
-
-            <TextView
-                android:id="@+id/user_status"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="2dp"
-                android:gravity="start"
-                android:text="user status"
-                android:textAlignment="textStart"
-                android:textSize="16sp" />
+                android:orientation="horizontal">
 
+                <TextView
+                    android:id="@+id/user_status"
+                    android:layout_width="225dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="2dp"
+                    android:gravity="start"
+                    android:paddingLeft="8dp"
+                    android:text="user status"
+                    android:textAlignment="textStart"
+                    android:textSize="16sp" />
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
