--- a/app/src/main/res/layout/activity_personalpage.xml
+++ b/app/src/main/res/layout/activity_personalpage.xml
@@ -57,19 +57,10 @@
                             android:textStyle="bold" />
 
                         <Button
-                            android:id="@+id/selfView"
-                            android:layout_width="74dp"
-                            android:layout_height="37dp"
-                            android:layout_marginLeft="10dp"
-                            android:layout_marginRight="10dp"
-                            android:layout_weight="1"
-                            android:background="@drawable/selfpage" />
-
-                        <Button
                             android:id="@+id/chatView"
-                            android:layout_width="74dp"
+                            android:layout_width="70dp"
                             android:layout_height="37dp"
-                            android:layout_weight="1"
+                            android:layout_marginLeft="90dp"
                             android:background="@drawable/commentpage" />
                     </LinearLayout>
 
@@ -105,50 +96,12 @@
                             android:textSize="18dp" />
 
                         <TextView
-                            android:id="@+id/textView10"
+                            android:id="@+id/userLive"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="台北市"
                             android:textSize="18dp" />
 
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:id="@+id/userFans"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginRight="10dp"
-                            android:gravity="center"
-                            android:text="好友"
-                            android:textSize="18dp" />
-
-                        <TextView
-                            android:id="@+id/userFansAmt"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginRight="10dp"
-                            android:text="20"
-                            android:textSize="18dp" />
-
-                        <TextView
-                            android:id="@+id/cancel"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginRight="10dp"
-                            android:text="爽約次數"
-                            android:textSize="18sp" />
-
-                        <TextView
-                            android:id="@+id/cancelAmt"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="10"
-                            android:textSize="18dp" />
                     </LinearLayout>
 
                 </LinearLayout>
@@ -272,61 +225,17 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginRight="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:background="@drawable/shape_textview">
+                    android:layout_marginBottom="10dp">
 
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:orientation="vertical">
+                        android:orientation="vertical" >
 
-                        <LinearLayout
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/actHold"
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_marginLeft="20dp"
-                            android:orientation="horizontal">
-
-                            <ImageView
-                                android:id="@+id/activityphoto"
-                                android:layout_width="120dp"
-                                android:layout_height="match_parent"
-                                app:srcCompat="@drawable/head" />
-
-                            <LinearLayout
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginLeft="60dp"
-                                android:orientation="vertical">
-
-                                <TextView
-                                    android:id="@+id/title"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:gravity="center"
-                                    android:text="@string/acttitle"
-                                    android:textSize="20dp" />
-
-                                <TextView
-                                    android:id="@+id/date"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginTop="5dp"
-                                    android:gravity="center"
-                                    android:text="@string/actDate"
-                                    android:textSize="20dp" />
-
-                                <TextView
-                                    android:id="@+id/textView48"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginTop="5dp"
-                                    android:gravity="center"
-                                    android:text="高雄大學籃球場"
-                                    android:textSize="20dp" />
-
-                            </LinearLayout>
-
-                        </LinearLayout>
+                            android:layout_height="match_parent" />
                     </LinearLayout>
                 </HorizontalScrollView>
 
