--- a/app/src/main/res/layout/item_act.xml
+++ b/app/src/main/res/layout/item_act.xml
@@ -18,8 +18,14 @@
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="@id/guideline11"
         app:layout_constraintStart_toStartOf="@id/guideline11"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:gravity="center_vertical">
 
+        <ImageView
+            android:id="@+id/activityphoto"
+            android:layout_width="91dp"
+            android:layout_height="92dp"
+            app:srcCompat="@drawable/head" />
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
